# artist_wordcloud

./: .gitignore  artist.ipynb  lyrics_taylorswift_clean.json  pyproject.toml
