[tool.poetry]
name = "artist_wordcloud"
version = "0.1.0"
description = "Create a wordcloud from an artist's lyrics"
authors = ["Allen <allen.gueco1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.1"
pandas = "^1.3.3"
matplotlib = "^3.4.3"
lyricsgenius = "^3.0.1"
wordcloud = "^1.8.1"
jupyterlab = "^3.1.14"
nltk = "^3.6.4"
clean-text = {extras = ["gpl"], version = "^0.5.0"}
Unidecode = "^1.3.2"

[tool.poetry.dev-dependencies]
nltk = "^3.6.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
